--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@ description:
 
 <h2>Start</h2>
 <p>
-  Ruhoh is all about the command-line.
+ Let's study mathematics and programming together
   <br>Check out the goods:
 </p>
 <pre><code>$ ruhoh help</code></pre>
